# points-for-progress

./: .gitignore  LICENSE  README.md
p4p-cli/: .gitignore  Cargo.toml
p4p-lib/: Cargo.toml
pfp/: .dockerignore  .sqllsrc.json  Cargo.toml  Dockerfile  diesel.toml  package.json  pnpm-lock.yaml  rapid.toml  run.sh  tmux.sh
pfp/app/: root.tsx
pfp/app/api/: bindings.ts
pfp/app/api/routes/: index.rs
pfp/app/routes/: _index.tsx
pfp/database/: lib.rs  models.rs  schema.rs
pfp/database/migrations/2023-06-06-143901_goals/: up.sql
pfp/migrations/2023-06-05-200634_goals/: up.sql
pfp/src/: cli.rs  main.rs
pfp/tests/: postgres_connection.rs
