[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["chrono", "postgres", "url"] }
dotenvy = "0.15.7"
futures-util = "0.3.28"
include_dir = "0.7.3"
# rapid_web = "0.4.0" 
rapid-web = { git = "https://github.com/Cincinnati-Ventures/rapid.git" }

# Rapid binary
[[bin]]
name = "api"
path = "app/api/root.rs"

# Site backend
[lib]
name = "database"
path = "database/lib.rs"
